--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
 <!-- Write your HTML in this file -->
 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    
+  </body>
+</html>
