--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title></title>
   </head>
   <body>
-    <!-- This is a comment! -->
+    <p>Hello</p><!-- This is a comment! -->
   </body>
 </html>
