Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <head>
     <meta charset="utf-8">
     <title>Hey</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <p>Hello</p><!-- This is a comment! -->
