--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta charset="utf-8">
     <title>Hey</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="company.css">
+<link rel="stylesheet" type="text/css" href="engineering-department.css">
+<link rel="stylesheet" type="text/css" href="project-x-launch.css">
+<link rel="stylesheet" type="text/css" href="typography.css">
   </head>
   <body>
     <p>Hello</p><!-- This is a comment! -->
